--- a/customer-service/src/main/resources/application.properties
+++ b/customer-service/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.url=jdbc:h2:mem:customers-db
 spring.h2.console.enabled=true
 spring.cloud.discovery.enabled=false
 spring.cloud.config.enabled=false
+
+spring.data.rest.base-path=/api
